# mythos

./: .coveragerc  .readthedocs.yaml  CONTRIBUTING.md  README.md  gromacs_opt.py  pyproject.toml  stretch_twist.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  dist.yml  security.yml
data/templates/lammps-duplex-8/: input
data/templates/lammps-oxdna1-40bp-sa/: in
data/templates/lammps-stretch-tors/: input
data/templates/simple-helix-60bp-oxdna1/: input
data/templates/simple-helix-60bp-oxdna1-lammps/: init.conf.lammps  input  log.lammps
data/templates/simple-helix-60bp-oxdna2-lammps/: init.conf.lammps  input  log.lammps
data/templates/tm-6bp-2op/: init_bound.conf  input  wfile.txt
data/test-data/gromacs/: preprocessed_topology.top
data/test-data/martini/: DMPC_C1A-C2A-C3A_angle_dist.npy  DMPC_C1A-C2A_bond_dist.npy
data/test-data/melting_temp/: input  op.txt
docs/source/: advanced_usage.rst  basic_usage.rst  conf.py  energy_functions.rst  examples.rst  getting_started.rst  gpu.rst  index.rst  observables.rst  optimization.rst  ray_optimizer.rst  simulators.rst  slurm.rst
examples/: README.md  full_reparam_oxdna1.py  gromacs_prep.py
examples/advanced_optimizations/: Optimization_with_JaxDNA_tutorial.ipynb  jaxDNA_tutorial_FNANO_2025.ipynb  oxdna1_full_reparameterization.py
examples/advanced_optimizations/martini/: full_reparam.py  m2_bottom_up_opt.py  m2_thickness_opt.py  m3_melting_temp.py
examples/advanced_optimizations/oxDNA/: lammps.py  lp_optimization.py  multi_trajectory.ipynb  multi_trajectory.py  oxDNA.py  tm_optimization.py
examples/jaxmd/: propeller_twist_optimization.ipynb  simulation.ipynb
examples/martini/: bottom_up_optimization.ipynb  melting_temperature_optimization.ipynb  membrane_thickness_optimization.ipynb
examples/oxdna/: lammps_propeller_twist_optimization.ipynb  melting_temperature_optimization.ipynb  multi_trajectory_optimization.ipynb  persistence_length_optimization.ipynb  propeller_twist_optimization.ipynb  simulation.ipynb
examples/scripts/: martini_full_reparameterization.py
examples/simple_optimizations/jaxmd/: jaxmd.ipynb  jaxmd.py  jaxmd_seqopt.py  pseq_optimization.py
examples/simulations/gromacs/: gromacs.py
examples/simulations/jaxmd/: jaxmd.ipynb  jaxmd.py
examples/simulations/oxdna/: oxDNA.ipynb  oxDNA.py
jax_dna/energy/: base.py  configuration.py  utils.py
jax_dna/energy/dna1/: __init__.py  bonded_excluded_volume.py  coaxial_stacking.py  cross_stacking.py  expected_hydrogen_bonding.py  expected_stacking.py  fene.py  hydrogen_bonding.py  stacking.py  unbonded_excluded_volume.py
jax_dna/energy/dna2/: __init__.py  coaxial_stacking.py  debye.py  stacking.py
jax_dna/energy/na1/: bonded_excluded_volume.py  coaxial_stacking.py  cross_stacking.py  debye.py  fene.py  hydrogen_bonding.py  stacking.py  unbonded_excluded_volume.py
jax_dna/energy/rna2/: cross_stacking.py  stacking.py
jax_dna/energy/tests/: test_base.py
jax_dna/input/: sequence_constraints.py  sequence_dependence.py  topology.py  trajectory.py
jax_dna/input/dna2/: default_simulation.toml
jax_dna/input/tests/: test_topology.py  test_trajectory.py
jax_dna/observables/: base.py  melting_temp.py  persistence_length.py
jax_dna/observables/tests/: test_lp.py  test_melting_temp.py
jax_dna/optimization/: objective.py  optimization.py
jax_dna/optimization/tests/: test_objective.py  test_optimization.py
jax_dna/simulators/: base.py  io.py  ray.py
jax_dna/simulators/jax_md/: jaxmd.py  utils.py
jax_dna/simulators/lammps/: __init__.py  lammps_oxdna.py
jax_dna/simulators/oxdna/: __init__.py  oxdna.py  utils.py
jax_dna/simulators/tests/: test_io.py  test_ray_simulators.py  (+1 more)
jax_dna/utils/: units.py
mythos/: __init__.py
mythos/energy/: __init__.py  base.py  configuration.py  potentials.py  utils.py
mythos/input/: __init__.py  gromacs_input.py  oxdna_input.py  sequence_constraints.py  sequence_dependence.py  topology.py  trajectory.py  tree.py
mythos/losses/: __init__.py  observable_wrappers.py
mythos/observables/: __init__.py  area_per_lipid.py  base.py  bond_distances.py  diameter.py  martini_utils.py  melting_temp.py  membrane_melting_temp.py  membrane_thickness.py  persistence_length.py  pitch.py  propeller.py  rise.py  rmse.py  stretch_torsion.py  triplet_angles.py  wasserstein.py  wlc.py
mythos/optimization/: __init__.py  objective.py  optimization.py  simulator.py
mythos/simulators/: __init__.py  base.py  io.py  ray.py
mythos/ui/: __init__.py
mythos/utils/: __init__.py  command.py  helpers.py  math.py  scheduler.py  types.py  units.py
requirements/: docs.txt  prd.txt  test.txt
(+230 files in other folders)
